--- a/docs/ozon-key.mdx
+++ b/docs/ozon-key.mdx
@@ -41,7 +41,7 @@ slug: wb-key
 <details>
     <summary>Сколько занимает проверка токена?</summary>
 
-    <Image img={require('./img/ozon-key/check.png')} />
+    <Image img={require('./img/ozon-key/check1.png')} />
 
     Проверка токена занимает от 1 минуты до нескольких часов, в зависимости от нагрузки на сервер интеграции.
 
