--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -37,7 +37,7 @@ RealFBS (Standard).
 
 Для этого необходимо перейти на страницу [настроек интеграции](https://lk.cdek.ru/integration) и выбрать режим **DBS**.
 
-<Image img={require('./img/start.png')} />
+<Image img={require('./img/start1.png')} />
 
 Далее необходимо сгенерировать токен Ozon и ввести его в настройках интеграции.
 Инструкцию по генерации токена можно прочитать на [отдельной странице](./ozon-key.mdx).
