--- a/docs/ozon-key.mdx
+++ b/docs/ozon-key.mdx
@@ -10,18 +10,18 @@ slug: wb-key
 
 Со страницы профиля необходимо перейти в раздел `Seller API`.
 
-<Image img={require('./img/ozon-key/profile.png')} />
+<Image img={require('./img/ozon-key/profile1.png')} />
 
 Затем создать новый токен, нажав на кнопку **Сгенерировать ключ**.
 
 Для создаваемого токена необходимо указать название и выбрать роль `Admin`. Затем
 подтвердить создание нажатием на кнопку **Сгенерировать**.
 
-<Image img={require('./img/ozon-key/create.png')} />
+<Image img={require('./img/ozon-key/create1.png')} />
 
 Необходимо скопировать сгенерированный токен и вставить его в [настройки интеграции](https://lk.cdek.ru/integration).
 
-<Image img={require('./img/ozon-key/token.png')} />
+<Image img={require('./img/ozon-key/token1.png')} />
 
 :::warning
 
@@ -31,12 +31,12 @@ slug: wb-key
 
 Дополнительно, необходимо скопировать `Client ID` и вставить его в поле `Client ID` в настройках интеграции.
 
-<Image img={require('./img/ozon-key/client.png')} />
+<Image img={require('./img/ozon-key/client1.png')} />
 
 После заполнения поля, необходимо подтвердить ознакомление с
 согласием на передачу данных и отправить токен на проверку, нажав **Проверить API-ключ**.
 
-<Image img={require('./img/ozon-key/key.png')} />
+<Image img={require('./img/ozon-key/key1.png')} />
 
 <details>
     <summary>Сколько занимает проверка токена?</summary>
