--- a/docs/creation.mdx
+++ b/docs/creation.mdx
@@ -104,7 +104,7 @@ Ozon.
 
 ### Вручение накладной
 
-За час до вручения заказа, курьер СДЭК свяжется с покупателем по телефону, а при вручении запросит документ.
+При вручении заказа менеджер ПВЗ \ курьер запросит получателя документ.
 
 В зависимости от вручения или не вручения заказа, система передаст информацию об этом в Ozon и заказ перейдет в статус
 `Доставлен` или `Отменен`.
