--- a/docs/setup.mdx
+++ b/docs/setup.mdx
@@ -28,7 +28,7 @@ slug: setup
 <details>
     <summary>Секция данных о магазине</summary>
 
-    <Image img={require('./img/setup/shop/main.png')} />
+    <Image img={require('./img/setup/shop/main2.png')} />
 
     Данные из поля названия будут использоваться в качестве продавца в накладной.
 
