--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -20,6 +20,13 @@ RealFBS (Standard).
 - Синхронизация статуса доставки заказов между Ozon и СДЭК
 - Прогнозирование размера упаковки на основе товаров заказа и подбор оптимального тарифа для отправки
 
+Ознакомьтесь с ограничениями ВГХ товаров доступных для продажи на Ozon
+
+<details>
+<Image img={require('./img/vgh_ozon.png')} />
+</details>
+
+
 <details>
     <summary>Принцип работы интеграции</summary>
 
