--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -23,7 +23,30 @@ RealFBS (Standard).
 Ознакомьтесь с ограничениями ВГХ товаров доступных для продажи на Ozon
 
 <details>
-<Image img={require('./img/vgh_ozon.png')} />
+<summary>Ограничения ВГХ товаров</summary>
+| Перевозчик | Наименование услуги (метода)                          | Max длина, см | Max ширина, см | Max высота, см | Max вес, кг |
+|------------|------------------------------------------------------|---------------|----------------|----------------|-------------|
+| СДЭК       | Доставка курьером. Экспресс лайт дверь-дверь          | 150           | 150            | 150            | 29          |
+| СДЭК       | Доставка в ПВЗ. Экспресс лайт склад-склад             | 150           | 150            | 150            | 29.9        |
+| СДЭК       | Доставка курьером. Экспресс лайт склад-дверь          | 150           | 150            | 150            | 29.9        |
+| СДЭК       | Доставка в ПВЗ. Экспресс лайт дверь-склад             | 150           | 150            | 150            | 29.9        |
+| СДЭК       | Доставка курьером. Магистральный экспресс дверь-дверь | 200           | 200            | 200            | 100         |
+| СДЭК       | Доставка в ПВЗ. Магистральный экспресс дверь-склад    | 200           | 200            | 200            | 100         |
+| СДЭК       | Доставка в ПВЗ. Посылка склад-склад                   | 149           | 149            | 149            | 29.9        |
+| СДЭК       | Доставка курьером. Посылка склад-дверь                | 149           | 149            | 149            | 29.9        |
+| СДЭК       | Доставка в ПВЗ. Посылка дверь-склад                   | 150           | 150            | 150            | 29.9        |
+| СДЭК       | Доставка курьером. Посылка дверь-дверь                | 150           | 150            | 150            | 29.9        |
+| СДЭК       | Доставка курьером. Экономичная посылка склад-дверь    | 150           | 150            | 150            | 49.9        |
+| СДЭК       | Доставка курьером. Экономичная посылка склад-дверь    | 150           | 150            | 150            | 49.9        |
+| СДЭК       | Доставка в ПВЗ. Экономичная посылка склад-склад       | 150           | 150            | 150            | 49.9        |
+| СДЭК       | Доставка в ПВЗ. Экспресс лайт дверь-постамат          | 150           | 150            | 150            | 29.9        |
+| СДЭК       | Доставка в ПВЗ. Экспресс лайт склад-постамат          | 150           | 150            | 150            | 29.9        |
+| СДЭК       | Доставка в ПВЗ. Посылка дверь-постамат                | 150           | 150            | 150            | 29.9        |
+| СДЭК       | Доставка в ПВЗ. Посылка склад-постамат                | 150           | 150            | 150            | 29.9        |
+| СДЭК       | Доставка в ПВЗ. Экономичная посылка склад-постамат    | 150           | 150            | 150            | 49.9        |
+
+
+
 </details>
 
 
