--- a/docs/setup.mdx
+++ b/docs/setup.mdx
@@ -169,7 +169,7 @@ slug: setup
 
     :::info
 
-    Заказы, созданные покупателями для деактивированного склада, не будут загружаться из Wildberries.
+    Заказы, созданные покупателями для деактивированного склада, не будут загружаться из Ozon.
 
     :::
 
