--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -11,7 +11,7 @@ slug: /
 
 Данная интеграция предназначена для автоматического создания накладных СДЭК для заказов, оформленных по модели
 RealFBS (Standard).
-Подробнее про модель продаж DBS можно прочитать в [инструкции](https://seller.ozon.ru/media/beginners/realfbs-na-ozon-chto-takoe-i-kak-nachat/).
+Подробнее про модель продаж RealFBS можно прочитать в [инструкции](https://seller.ozon.ru/media/beginners/realfbs-na-ozon-chto-takoe-i-kak-nachat/).
 
 :::
 
