--- a/docs/setup.mdx
+++ b/docs/setup.mdx
@@ -32,7 +32,7 @@ slug: setup
 
     Данные из поля названия будут использоваться в качестве продавца в накладной.
 
-    <Image img={require('./img/setup/autopack.png')} />
+    <Image img={require('./img/autopack.png')} />
 
     По умолчанию новые заказы автоматически будут переводиться интеграцией в статус Ожидают отгрузки.  
     Для отключения этой функциональности можно нажать Выключить автосборку. В этом случае если у покупателя было несколько заказов их можно будет разбить в ЛК Озона.  [Инструкция как разбить заказ на несколько отправлений] (https://seller-edu.ozon.ru/mobile-app/rabota-s-zakazamy).
