--- a/docs/setup.mdx
+++ b/docs/setup.mdx
@@ -167,7 +167,7 @@ slug: setup
 - **Активировать/деактивировать интеграцию склада**
 - **Задать город**, в котором находится склад
 
-**Важно:** Для включения управления складом необходимо **включить радиобатон "Синхронизировать склады"**. 
+**Важно:** Для включения управления складом необходимо **включить радиобатон "Включить синхронизацию"**. 
 
     :::note
 
