--- a/docs/ozon-key.mdx
+++ b/docs/ozon-key.mdx
@@ -50,14 +50,21 @@ slug: key
 </details>
 
 <details>
-    <summary>Ошибка проверки токена</summary>
+    <summary>Ошибка проверки токена и обновить токен</summary>
 
-    <Image img={require('./img/ozon-key/error.png')} />
+    <Image img={require('./img/token_updated.png')} />
 
-    В случае ошибки проверки токена, необходимо проверить правильность введенного токена и выданных ему прав доступа.
-    При необходимости, требуется создать новый токен и повторить процедуру.
+В случае ошибки проверки токена, необходимо проверить правильность введенного токена и выданных ему прав доступа.
+При необходимости, требуется обновить токен: 
+1. Зайти в ЛК Ozon.
+2. Сгенерировать новый API-ключ.
+3. Перейти в личный кабинет юридического лица.
+4. Вставить сгенерированный ключ в поле "API key".
+5. Нажать кнопку “Проверить Api key”.
+6. После проверки ключа появится магазин со статусом “Отключен”.
+7. Необходимо нажать кнопку “Активировать”.
 
-    Если проблема не решается, необходимо обратиться в [техническую поддержку СДЭК](mailto:integrator@cdek.ru)
+Если проблема не решается, необходимо обратиться в [техническую поддержку СДЭК](mailto:integrator@cdek.ru)
 
 </details>
 
