--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -65,7 +65,8 @@ RealFBS (Standard).
 
 Для работы интеграции, не требуется установка дополнительного ПО. Вся настройка происходит через личный кабинет СДЭК.
 
-Для этого необходимо перейти на страницу [настроек интеграции](https://lk.cdek.ru/integration) и выбрать режим **DBS**.
+Для этого необходимо перейти на страницу [настроек интеграции](https://lk.cdek.ru/integration) и выбрать режим **DBS** и вкладку Ozon.
+После чего нажать кнопку "Добавить магазин"
 
 <Image img={require('.img/initial.png')} /> 
 
