--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -68,7 +68,7 @@ RealFBS (Standard).
 Для этого необходимо перейти на страницу [настроек интеграции](https://lk.cdek.ru/integration) и выбрать режим **DBS** и вкладку Ozon.
 После чего нажать кнопку "Добавить магазин"
 
-<Image img={require('.img/initial.png')} /> 
+<Image img={require('./img/initial.png')} />  
 
 Далее необходимо сгенерировать токен Ozon и ввести его в настройках интеграции.
 Инструкцию по генерации токена можно прочитать на [отдельной странице](./ozon-key.mdx).
