--- a/docs/setup.mdx
+++ b/docs/setup.mdx
@@ -128,6 +128,7 @@ slug: setup
 
 <Image img={require('./img/setup/warehouse/type1.png')} />
 
+### Создать метод доставки СДЭК до ПВЗ СДЭК или курьером СДЭК до двери
 В новом методе доставки выбрать доставку через CДЭК.
 Затем выбрать вариант `Уже есть договор`.
 
@@ -143,6 +144,30 @@ slug: setup
 личном кабинете СДЭК.
 
 :::
+
+### Создать метод доставки до ПВЗ Ozon
+:::warning
+
+**Важно!** Для того чтобы накладные создавались автоматически, важно в ЛК Озона иметь склад, на котором существуют хотя бы 1 метод с доставкой СДЭК (по своему договору).
+
+:::
+
+Настройка метода доставки: 
+- В существующий склад с методом доставки СДЭК добавьте новый метод "Своя или другая служба".
+- Укажите любое название метода (например, "СДЭК до ПВЗ Озон").
+- Задайте стандартный или индивидуальный тариф для оплаты покупателем.
+- Настройте географию и сроки: используйте тарифный калькулятор СДЭК для точных сроков.
+- Обязательно заполните вкладки возвратов - это обязательное требования Озона.
+- Нажмите "Сохранить".
+- Убедитесь, что метод находится в статусе "Активный".
+<Image img={require('./img/own_delivery1.png')} />
+
+**Особенности заказов до ПВЗ Озон**
+- При получении заказа по этому методу в ЛК ЮЛ:
+- В поле "Получатель": будет указано "ПВЗ Озона"
+- Номер телефона: будет общий номер телефона Озона
+**Если автосборка включена, то статусы вручную менять в ЛК Озона не требуется. Интеграция самостоятельно перевет заказ в статус “Ожидает отгрузки”, а после того как заказ будет сдан в ПВЗ СДЭК в статус “Доставляется”.** 
+
 
 
 :::note
